created footer with team image placeholders

--- a/test.html
+++ b/test.html
@@ -1,41 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>LifeQuest</title>
     <!--Google Font CDN-->
-    <link href='https://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'><!--Bootstrap CDN-->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
-    rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
+    <!--Bootstrap CDN-->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     <!--CSS Stylesheet-->
     <link href="public/assets/css/style.css" rel="stylesheet" type="text/css">
     <!--Font Awesome CDN-->
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
-    rel="stylesheet"><!--jQuery CDN-->
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
+    <!--jQuery CDN-->
     <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript">
-    </script><!--Firebase CDN-->
+    </script>
+    <!--Firebase CDN-->
     <script src="https://cdn.firebase.com/js/client/2.4.1/firebase.js">
-    </script> 
+    </script>
 </head>
-<body>
 
-<!--Start Of Navbar-->
+<body>
+    <!--Start Of Navbar-->
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <!-- Toggle For Mobile Display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span> 
-                <span class="icon-bar"></span> <span class="icon-bar"></span> 
-                <span class="icon-bar"></span>
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span> <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="test.html"><img alt="logo"
-                height="34" src="public/assets/img/logo2.png" width="92"></a>
+                <a class="navbar-brand" href="test.html"><img alt="logo" height="34" src="public/assets/img/logo2.png" width="92"></a>
             </div>
             <!-- Login and Signup Area -->
             <form class="navbar-form pull-right">
                 <input class="span2" placeholder="Email" type="text">
                 <input class="span2" placeholder="Password" type="password">
-                <button class="btn loginBtn btn-sm" type="submit">Login</button><br>
+                <button class="btn loginBtn btn-sm" type="submit">Login</button>
+                <br>
                 <a class="navSection" href="#">Sign Up</a> <a class="navSection" href="#">Forgot Password?</a>
             </form>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -52,78 +54,87 @@
                         </ul>
                     </li>
                 </ul>
-            </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
     </nav>
     <div class="container">
         <div class="row">
             <div class="col-lg12 col-md-12 col-sm-12">
                 <div class="mainArea text-center">
-                    <img alt="main-logo" class="img-responsive center-block"
-                    src="public/assets/img/logo.png"> 
+                    <img alt="main-logo" class="img-responsive center-block" src="public/assets/img/logo.png">
                     <!-- <h1>Motivate Yourself</h1> -->
                     <br>
-                    <button class="btn btn-lg btn-default signUp clearBtn"
-                    type="submit">Get Started</button>
+                    <button class="btn btn-lg btn-default signUp clearBtn" type="submit">Get Started</button>
                 </div>
             </div>
         </div>
     </div>
     <div class="text-center middle">
         <div class="container">
-          <div class="row">
-            <div class="col-lg-4 col-md-4 col-sm-12">
-            <h3>Create Your Character</h3>
-            <p class="text-left">Sign up today and create your virtual
-            character who best represents you to help manage and accomplish
-            your goals.</p><img alt="characters" height="150" src="public/assets/img/characters2.png" width="295">
-           <!--  <hr class="halfRule"> -->
-            </div>
-
-            <div class="col-lg-4 col-md-4 col-sm-12">
-                <h3>Add Your Goals</h3>
-                <p class="text-left">Create and manage your tasks and goals. Be
-                able to prioritize goals and accomplish them,earning points for
-                each completed goal.</p><br>
-                <h5 class="text-left"><i class="glyphicon glyphicon-tasks"></i>
+            <div class="row">
+                <div class="col-lg-4 col-md-4 col-sm-12">
+                    <h3>Create Your Character</h3>
+                    <p class="text-left">Sign up today and create your virtual character who best represents you to help manage and accomplish your goals.</p><img alt="characters" height="150" src="public/assets/img/characters2.png" width="295">
+                    <!--  <hr class="halfRule"> -->
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-12">
+                    <h3>Add Your Goals</h3>
+                    <p class="text-left">Create and manage your tasks and goals. Be able to prioritize goals and accomplish them,earning points for each completed goal.</p>
+                    <br>
+                    <h5 class="text-left"><i class="glyphicon glyphicon-tasks"></i>
                 Goal: Finish English Paper</h5>
-                <div class="progress">
-                    <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="50" class="progress-bar" role="progressbar" style="width: 50%;">
-                        50% Complete
+                    <div class="progress">
+                        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="50" class="progress-bar" role="progressbar" style="width: 50%;">
+                            50% Complete
+                        </div>
                     </div>
-                </div>
-                <h5 class="text-left"><i class="glyphicon glyphicon-tasks"></i>
+                    <h5 class="text-left"><i class="glyphicon glyphicon-tasks"></i>
                 Goal: Do Laundry</h5>
-                <div class="progress">
-                    <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="75" class="progress-bar" role="progressbar" style="width: 75%;">
-                        75% Complete
+                    <div class="progress">
+                        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="75" class="progress-bar" role="progressbar" style="width: 75%;">
+                            75% Complete
+                        </div>
                     </div>
+                    <!--    <hr class="halfRule"> -->
                 </div>
-             <!--    <hr class="halfRule"> -->
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-12">
-            <h3>Track Your Progress</h3>
-            <p class="text-left">Grow your character level and internal motivation by tracking your success through our leaderboards and compare with other gamers.</p>
-            <img alt="create" height="150" src="public/assets/img/create.png" width="150">
-          <!--   <hr class="halfRule"> -->
+                <div class="col-lg-4 col-md-4 col-sm-12">
+                    <h3>Track Your Progress</h3>
+                    <p class="text-left">Grow your character level and internal motivation by tracking your success through our leaderboards and compare with other gamers.</p>
+                    <img alt="create" height="150" src="public/assets/img/create.png" width="150">
+                    <!--   <hr class="halfRule"> -->
+                </div>
             </div>
         </div>
-      </div>
     </div>
-
     <!--Footer Section-->
-    <!-- <div class="footer">
-<div class="container">
-<div class="row">
-<div class="col-lg-12 col-md-6 col-sm-6">
-<img src="../img/todd.jpeg" alt="todd" class="img-responsive">
-<img src="#" alt="rich">
-<img src="#" alt="tom">
-<img src="#" alt="sal">
-</div>
-</div>
-</div>
-</div> -->
+    <div class="footer">
+        <div class="container-fluid bg-3 text-center">
+            <h3>The Team</h3>
+            <br>
+            <div class="row">
+                <div class="col-sm-3">
+                    <h3>Todd Germaine</h3>
+                    <img class="text-center" src="https://placeholdit.imgix.net/~text?txtsize=23&bg=000000&txt=250%C3%97250&w=250&h=250" class="img-responsive" style="width:45%" alt="Image">
+                </div>
+                <div class="col-sm-3">
+                    <h3>Richard</h3>
+                    <img class="text-center" src="https://placeholdit.imgix.net/~text?txtsize=23&bg=000000&txt=250%C3%97250&w=250&h=250" class="img-responsive" style="width:45%" alt="Image">
+                </div>
+                <div class="col-sm-3">
+                    <h3>Sal</h3>
+                    <img class="text-center" src="https://placeholdit.imgix.net/~text?txtsize=23&bg=000000&txt=250%C3%97250&w=250&h=250" class="img-responsive" style="width:45%" alt="Image">
+                </div>
+                <div class="col-sm-3">
+                    <h3>Tom</h3>
+                    <img class="text-center" src="https://placeholdit.imgix.net/~text?txtsize=23&bg=000000&txt=250%C3%97250&w=250&h=250" class="img-responsive" style="width:45%" alt="Image">
+                </div>
+            </div>
+            </div>
+        </div>
+        <br>
+    </div>
     <!--For Modal <div class="container">
 <div class="wrapper">
 <form class="form-signin"> <h2 class="form-signin-heading">Please login</h2>
@@ -138,28 +149,24 @@
     <!-- Latest compiled and minified Bootstrap JavaScript -->
     <script type="text/javascript">
     $(document).ready(function() {
-    
-    var bgCounter = 0,
-        backgrounds = [ "public/assets/img/bg.png", "public/assets/img/bg2.png", "public/assets/img/bg1.jpg", "public/assets/img/bg3.jpg"];
 
-    function changeBackground()
-    {
-        bgCounter = (bgCounter+1) % backgrounds.length;
-        $('body').css('background', '#000 url('+backgrounds[bgCounter]+') no-repeat');
-        $('body').css('background-size', '100% 60%');
-        $('body').css('background-repeat', 'no-repeat');
+        var bgCounter = 0,
+            backgrounds = ["public/assets/img/bg.png", "public/assets/img/bg2.png", "public/assets/img/bg1.jpg", "public/assets/img/bg3.jpg"];
 
-    
-        setTimeout(changeBackground, 10000);
-    }
-    changeBackground();
+        function changeBackground() {
+            bgCounter = (bgCounter + 1) % backgrounds.length;
+            $('body').css('background', '#000 url(' + backgrounds[bgCounter] + ') no-repeat');
+            $('body').css('background-size', '100% 60%');
+            $('body').css('background-repeat', 'no-repeat');
 
-     });
 
+            setTimeout(changeBackground, 10000);
+        }
+        changeBackground();
+
+    });
     </script>
-
-
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </body>
+
 </html>
