added github png and respective links

--- a/test.html
+++ b/test.html
@@ -110,7 +110,7 @@
     </div>
     <!--Footer Section-->
     <div class="footer">
-        <div class="container-fluid bg-3 text-center">
+        <div class="container-fluid text-center">
             <h3>The Team</h3>
             <br>
             <div class="row">
@@ -131,10 +131,31 @@
                     <img class="text-center" src="https://placeholdit.imgix.net/~text?txtsize=23&bg=000000&txt=250%C3%97250&w=250&h=250" class="img-responsive" style="width:45%" alt="Image">
                 </div>
             </div>
-            </div>
         </div>
-        <br>
+    	<div class="row">
+    		<div class="col-sm-3 text-center">
+    			<a href="https://github.com/tg7">
+					<img src="public/assets/img/github.png" alt="github">
+		  		</a>
+    		</div>
+    		<div class="col-sm-3 text-center">
+    			<a href="https://github.com/rso136">
+					<img src="public/assets/img/github.png" alt="github">
+		  		</a>
+    		</div>
+    		<div class="col-sm-3 text-center">
+    			<a href="https://github.com/salszu">
+					<img src="public/assets/img/github.png" alt="github">
+		  		</a>
+    		</div>
+    		<div class="col-sm-3 text-center">
+    			<a href="https://github.com/ThomK1429">
+					<img src="public/assets/img/github.png" alt="github">
+		  		</a>
+    		</div>
+    	</div>
     </div>
+
     <!--For Modal <div class="container">
 <div class="wrapper">
 <form class="form-signin"> <h2 class="form-signin-heading">Please login</h2>
