fixed links and added names to profiles

--- a/test.html
+++ b/test.html
@@ -119,37 +119,37 @@
                     <img class="text-center" src="https://placeholdit.imgix.net/~text?txtsize=23&bg=000000&txt=250%C3%97250&w=250&h=250" class="img-responsive" style="width:45%" alt="Image">
                 </div>
                 <div class="col-sm-3">
-                    <h3>Richard</h3>
+                    <h3>Richard Oh</h3>
                     <img class="text-center" src="https://placeholdit.imgix.net/~text?txtsize=23&bg=000000&txt=250%C3%97250&w=250&h=250" class="img-responsive" style="width:45%" alt="Image">
                 </div>
                 <div class="col-sm-3">
-                    <h3>Sal</h3>
+                    <h3>Sal Szurlej</h3>
                     <img class="text-center" src="https://placeholdit.imgix.net/~text?txtsize=23&bg=000000&txt=250%C3%97250&w=250&h=250" class="img-responsive" style="width:45%" alt="Image">
                 </div>
                 <div class="col-sm-3">
-                    <h3>Tom</h3>
+                    <h3>Thomas Keel</h3>
                     <img class="text-center" src="https://placeholdit.imgix.net/~text?txtsize=23&bg=000000&txt=250%C3%97250&w=250&h=250" class="img-responsive" style="width:45%" alt="Image">
                 </div>
             </div>
         </div>
     	<div class="row">
     		<div class="col-sm-3 text-center">
-    			<a href="https://github.com/tg7">
+    			<a href="https://github.com/tg7" target="_blank">
 					<img src="public/assets/img/github.png" alt="github">
 		  		</a>
     		</div>
     		<div class="col-sm-3 text-center">
-    			<a href="https://github.com/rso136">
+    			<a href="https://github.com/rso136" target="_blank">
 					<img src="public/assets/img/github.png" alt="github">
 		  		</a>
     		</div>
     		<div class="col-sm-3 text-center">
-    			<a href="https://github.com/salszu">
+    			<a href="https://github.com/salszu" target="_blank">
 					<img src="public/assets/img/github.png" alt="github">
 		  		</a>
     		</div>
     		<div class="col-sm-3 text-center">
-    			<a href="https://github.com/ThomK1429">
+    			<a href="https://github.com/ThomK1429" target="_blank">
 					<img src="public/assets/img/github.png" alt="github">
 		  		</a>
     		</div>
