--- a/test.html
+++ b/test.html
@@ -6,13 +6,14 @@
     <link href='https://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'><!--Bootstrap CDN-->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
     rel="stylesheet">
-    <!--CSS Stylesheet-->
-    <link href="public/assets/css/style.css" rel="stylesheet" type="text/css">
     <!--Font Awesome CDN-->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
-    rel="stylesheet"><!--jQuery CDN-->
-    <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript">
-    </script><!--Firebase CDN-->
+    rel="stylesheet">
+    <!--CSS Stylesheet-->
+    <link href="public/assets/css/style.css" rel="stylesheet" type="text/css">
+    <!--jQuery CDN-->
+    <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
+    <!--Firebase CDN-->
     <script src="https://cdn.firebase.com/js/client/2.4.1/firebase.js">
     </script> 
 </head>
@@ -69,22 +70,30 @@
             </div>
         </div>
     </div>
-    <div class="text-center middle">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-4 col-md-4 col-sm-12">
-            <h3>Create Your Character</h3>
-            <p class="text-left">Sign up today and create your virtual
-            character who best represents you to help manage and accomplish
-            your goals.</p><img alt="characters" height="150" src="public/assets/img/characters2.png" width="295">
-           <!--  <hr class="halfRule"> -->
-            </div>
 
-            <div class="col-lg-4 col-md-4 col-sm-12">
-                <h3>Add Your Goals</h3>
-                <p class="text-left">Create and manage your tasks and goals. Be
-                able to prioritize goals and accomplish them,earning points for
-                each completed goal.</p><br>
+    <div class="text-center middle">
+      <div class="container">
+      <!--Start Of Thumbnail Row-->
+        <div class="row">
+        <!--Character Section-->
+            <div class="col-lg-4 col-md-4 col-sm-6">
+              <div class="thumbnail">
+               <h3>Create Your Character</h3>
+                <img alt="characters" height="150" src="public/assets/img/characters2.png" width="295">
+                   <div class="caption">
+                       <p class="text-left">Sign up today and create your virtual
+                       character who best represents you to help manage and accomplish
+                       your goals.</p>
+                       <p><a href="#" class="btn btn-primary" role="button">Add Modal Demo</a></p>
+                  </div>
+                </div>
+              </div>
+      <!--Goals Section-->
+            <div class="col-lg-4 col-md-4 col-sm-6">
+              <div class="thumbnail">
+              <h3>Add Your Goals</h3>
+                   <div class="caption">
+               <div class="goalBox">
                 <h5 class="text-left"><i class="glyphicon glyphicon-tasks"></i>
                 Goal: Finish English Paper</h5>
                 <div class="progress">
@@ -98,32 +107,47 @@
                     <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="75" class="progress-bar" role="progressbar" style="width: 75%;">
                         75% Complete
                     </div>
+                       
+                  </div>
                 </div>
-             <!--    <hr class="halfRule"> -->
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-12">
-            <h3>Track Your Progress</h3>
-            <p class="text-left">Grow your character level and internal motivation by tracking your success through our leaderboards and compare with other gamers.</p>
-            <img alt="create" height="150" src="public/assets/img/create.png" width="150">
-          <!--   <hr class="halfRule"> -->
-            </div>
+                  <p class="text-left">Create and manage your tasks and goals. Be
+                       able to prioritize goals and accomplish them,earning points for
+                       each completed goal.</p>
+                       <p><a href="#" class="btn btn-primary" role="button">Add Modal Demo</a></p>
+                </div>
+              </div>
+        </div>
+        <!--Track Your Progress Section-->
+        <div class="col-lg-4 col-md-4 col-sm-6">
+              <div class="thumbnail">
+               <h3>Track Your Progress</h3>
+                <img alt="create" height="150" src="public/assets/img/create.png" width="150">
+                   <div class="caption">
+                       <p class="text-left">Grow your character level and internal motivation by tracking your success through our leaderboards and compare with other gamers.</p>
+                       <p><a href="#" class="btn btn-primary" role="button">Add Modal Demo</a></p>
+                  </div>
+                </div>
+              </div>
+
+
         </div>
       </div>
     </div>
 
     <!--Footer Section-->
-    <!-- <div class="footer">
-<div class="container">
-<div class="row">
-<div class="col-lg-12 col-md-6 col-sm-6">
-<img src="../img/todd.jpeg" alt="todd" class="img-responsive">
-<img src="#" alt="rich">
-<img src="#" alt="tom">
-<img src="#" alt="sal">
-</div>
-</div>
-</div>
-</div> -->
+    <div class="footer">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-lg-12 col-md-12 col-sm-12">
+                    <img src="../img/todd.jpeg" alt="todd">
+                    <img src="#" alt="rich" alt="rich">
+                    <img src="#" alt="tom" alt="tom">
+                    <img src="#" alt="sal" alt="sal">
+                    <h6>2016&copy; LifeQuest All Rights Reserved</h6>
+                </div>
+            </div>
+        </div>
+    </div>
     <!--For Modal <div class="container">
 <div class="wrapper">
 <form class="form-signin"> <h2 class="form-signin-heading">Please login</h2>
