--- a/test.html
+++ b/test.html
@@ -55,7 +55,6 @@
                     <li class="dropdown">
                         <ul class="dropdown-menu">
                             <li><a href="#">Contact Us</a></li>
-                            <li><a href="#">Contact Us</a></li>
                             <li class="divider" role="separator"></li>
                             <!-- <li><a href="#">Separated link</a></li> -->
                         </ul>
@@ -128,7 +127,7 @@
         <!--Track Your Progress Section-->
             <div class="col-lg-4 col-md-4 col-sm-12">
               <div class="thumbnail">
-               <h3>Create Your Character</h3>
+               <h3>Be Rewarded</h3>
                 <img alt="characters" src="public/assets/img/create2.png" height="150" width="295">
                   <div class="caption">
                        <p class="text-left">Grow your character level by tracking your success through our leaderboards and compare with other gamers.</p>
@@ -140,54 +139,51 @@
       </div>
    </div>
     <!--Footer Section-->
-    <div class="footer">
-        <div class="container-fluid text-center">
-            <h4>The Team</h4>
+        <div class="footer">
+        <br>
+            <h2 class="text-center">The Team</h2>
             <br>
-            <div class="row">
-                <div class="col-sm-3">
+            <div class="row text-center">
+                <div class="col-sm-6 col-lg-3 col-md-3">
                     <h4>Todd Germaine</h4>
-                    <img class="text-center img-responsive" src="https://placeholdit.imgix.net/~text?txtsize=23&bg=000000&txt=250%C3%97250&w=250&h=250" style="width:45%" alt="todd">
+                        <img class="text-center" src="https://placeholdit.imgix.net/~text?txtsize=23&bg=000000&txt=250%C3%97250&w=250&h=250" style="width:45%" alt="todd">
+                    <br>
+                    <br>
+                    <a href="https://github.com/tg7" target="_blank">
+                         <img src="public/assets/img/github.png" alt="github">
+                    </a>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-6 col-lg-3 col-md-3">
                     <h4>Richard Oh</h4>
-                    <img class="text-center img-responsive" src="https://placeholdit.imgix.net/~text?txtsize=23&bg=000000&txt=250%C3%97250&w=250&h=250" style="width:45%" alt="richard">
+                    <img class="text-center" src="https://placeholdit.imgix.net/~text?txtsize=23&bg=000000&txt=250%C3%97250&w=250&h=250" style="width:45%" alt="richard">
+                    <br>
+                    <br>
+                    <a href="https://github.com/rso136" target="_blank">
+                    <img src="public/assets/img/github.png" alt="github">
+                    </a>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-6 col-lg-3 col-md-3">
                     <h4>Sal Szurlej</h4>
-                    <img class="text-center img-responsive" src="https://placeholdit.imgix.net/~text?txtsize=23&bg=000000&txt=250%C3%97250&w=250&h=250" style="width:45%" alt="sal">
+                    <img class="text-center" src="https://placeholdit.imgix.net/~text?txtsize=23&bg=000000&txt=250%C3%97250&w=250&h=250" style="width:45%" alt="sal">
+                    <br>
+                    <br>
+                     <a href="https://github.com/salszu" target="_blank">
+                    <img src="public/assets/img/github.png" alt="github">
+                    </a>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-6 col-lg-3 col-md-3">
                     <h4>Thomas Keel</h4>
-                    <img class="text-center img-responsive" src="https://placeholdit.imgix.net/~text?txtsize=23&bg=000000&txt=250%C3%97250&w=250&h=250" style="width:45%" alt="thomas">
+                    <img class="text-center" src="https://placeholdit.imgix.net/~text?txtsize=23&bg=000000&txt=250%C3%97250&w=250&h=250" style="width:45%" alt="thomas">
+                    <br>
+                    <br>
+                    <a href="https://github.com/ThomK1429" target="_blank">
+                    <img src="public/assets/img/github.png" alt="github">
+                    </a>
                 </div>
             </div>
         </div>
-    	<div class="row">
-    		<div class="col-sm-3 text-center">
-    			<a href="https://github.com/tg7" target="_blank">
-					<img src="public/assets/img/github.png" alt="github">
-		  		</a>
-    		</div>
-    		<div class="col-sm-3 text-center">
-    			<a href="https://github.com/rso136" target="_blank">
-					<img src="public/assets/img/github.png" alt="github">
-		  		</a>
-    		</div>
-    		<div class="col-sm-3 text-center">
-    			<a href="https://github.com/salszu" target="_blank">
-					<img src="public/assets/img/github.png" alt="github">
-		  		</a>
-    		</div>
-    		<div class="col-sm-3 text-center">
-    			<a href="https://github.com/ThomK1429" target="_blank">
-					<img src="public/assets/img/github.png" alt="github">
-		  		</a>
-    		</div>
-    	</div>
-    </div>
 
-    <!--For Modal <div class="container">
+<!--     For Modal <div class="container">
 <div class="wrapper">
 <form class="form-signin"> <h2 class="form-signin-heading">Please login</h2>
 <input type="text" class="form-control" name="username" placeholder="Email Address" required="" autofocus="" />
@@ -197,8 +193,8 @@
 <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button> </form>
 </div>
 </div>
--->
-    <!-- Latest compiled and minified Bootstrap JavaScript -->
+
+    Latest compiled and minified Bootstrap JavaScript -->
     <script type="text/javascript">
     $(document).ready(function() {
 
