added gif folder and created logos for the team

--- a/test.html
+++ b/test.html
@@ -127,38 +127,35 @@
       </div>
         <br>
         <br>
+            
             <div class="row text-center">
                 <div class="col-sm-6 col-lg-3 col-md-3">
+                    <a href="https://github.com/tg7" target="_blank">
+                    <img class="text-center" src="public/assets/gifs/theHero.gif" class="img-responsive"  alt="Image">
+                    </a>
                     <h4>Todd Germaine</h4>
                     <br>
-                    <br>
-                    <a href="https://github.com/tg7" target="_blank">
-                         <img src="public/assets/img/github.png" alt="github">
-                    </a>
                 </div>
                 <div class="col-sm-6 col-lg-3 col-md-3">
+                    <a href="https://github.com/rso136" target="_blank">
+                    <img class="text-center" src="public/assets/gifs/theGenius.gif" class="img-responsive"  alt="Image">
+                    </a>
                     <h4>Richard Oh</h4>
                     <br>
-                    <br>
-                    <a href="https://github.com/rso136" target="_blank">
-                    <img src="public/assets/img/github.png" alt="github">
-                    </a>
                 </div>
                 <div class="col-sm-6 col-lg-3 col-md-3">
+                    <a href="https://github.com/salszu" target="_blank">
+                    <img class="text-center" src="public/assets/gifs/theGuy.gif" class="img-responsive"  alt="Image">
+                    </a>
                     <h4>Sal Szurlej</h4>
                     <br>
-                    <br>
-                     <a href="https://github.com/salszu" target="_blank">
-                    <img src="public/assets/img/github.png" alt="github">
-                    </a>
                 </div>
                 <div class="col-sm-6 col-lg-3 col-md-3">
+                    <a href="https://github.com/ThomK1429" target="_blank">
+                    <img class="text-center" src="public/assets/gifs/theScientist.gif" class="img-responsive"  alt="Image">
+                    </a>
                     <h4>Thomas Keel</h4>
                     <br>
-                    <br>
-                    <a href="https://github.com/ThomK1429" target="_blank">
-                    <img src="public/assets/img/github.png" alt="github">
-                    </a>
                 </div>
             </div>
         </div>
