--- a/test.html
+++ b/test.html
@@ -41,7 +41,7 @@
                 <input class="span2" placeholder="Password" type="password">
                 <button class="btn loginBtn btn-sm" type="submit">Login</button>
                 <br>
-                <a class="navSection" href="#">Sign Up</a> <a class="navSection" href="#">Forgot Password?</a>
+                <a class="navSection" data-popup-open="popup-1" href="#">Sign Up</a> <a class="navSection" href="#">Forgot Password?</a>
             </form>
         </div>
         <!-- /.container-fluid -->
@@ -53,7 +53,7 @@
                         <img alt="main-logo" class="img-responsive center-block downward" src="public/assets/img/logo.png">
                         <!-- <h1>Motivate Yourself</h1> -->
                         <br>
-                        <button class="btn btn-lg btn-default signUp clearBtn" type="submit">Get Started</button>
+                        <button class="btn btn-lg btn-default signUp clearBtn" data-popup-open="popup-1" type="submit">Get Started</button>
                     </div>
                 </div>
             </div>
@@ -129,33 +129,25 @@
         <br>
             <div class="row text-center">
                 <div class="col-sm-6 col-lg-3 col-md-3">
-                    <h4>Todd Germaine</h4>
-                    <br>
-                    <br>
-                    <a href="https://github.com/tg7" target="_blank">
-                         <img src="public/assets/img/github.png" alt="github">
-                    </a>
-                </div>
-                <div class="col-sm-6 col-lg-3 col-md-3">
                     <h4>Richard Oh</h4>
-                    <br>
-                    <br>
                     <a href="https://github.com/rso136" target="_blank">
                     <img src="public/assets/img/github.png" alt="github">
                     </a>
                 </div>
                 <div class="col-sm-6 col-lg-3 col-md-3">
+                    <h4>Todd Germaine</h4>
+                    <a href="https://github.com/tg7" target="_blank">
+                         <img src="public/assets/img/github.png" alt="github">
+                    </a>
+                </div>
+                <div class="col-sm-6 col-lg-3 col-md-3">
                     <h4>Sal Szurlej</h4>
-                    <br>
-                    <br>
                      <a href="https://github.com/salszu" target="_blank">
                     <img src="public/assets/img/github.png" alt="github">
                     </a>
                 </div>
                 <div class="col-sm-6 col-lg-3 col-md-3">
                     <h4>Thomas Keel</h4>
-                    <br>
-                    <br>
                     <a href="https://github.com/ThomK1429" target="_blank">
                     <img src="public/assets/img/github.png" alt="github">
                     </a>
@@ -163,18 +155,6 @@
             </div>
         </div>
 
-<!--     For Modal <div class="container">
-<div class="wrapper">
-<form class="form-signin"> <h2 class="form-signin-heading">Please login</h2>
-<input type="text" class="form-control" name="username" placeholder="Email Address" required="" autofocus="" />
-<input type="password" class="form-control" name="password" placeholder="Password" required=""/> <label class="checkbox">
-<input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe"> Remember me
-</label>
-<button class="btn btn-lg btn-primary btn-block" type="submit">Login</button> </form>
-</div>
-</div>
-
-    Latest compiled and minified Bootstrap JavaScript -->
     <script type="text/javascript">
     $(document).ready(function() {
 
@@ -192,9 +172,35 @@
         }
         changeBackground();
 
+//Triggers modal On Click
+
     });
+
+
     </script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="public/assets/js/modal.js"></script>
 </body>
 
+ 
+<div class="popup" data-popup="popup-1">
+    <div class="popup-inner">
+
+    <div class="wrapper">
+    <form class="form-signin"> <h2 class="form-signin-heading">Please Login</h2>
+    <input type="text" class="form-control" name="username" placeholder="Email Address" required="" autofocus="" />
+    <input type="password" class="form-control" name="password" placeholder="Password" required=""/> 
+    <label class="checkbox">
+    <input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe"> Remember me
+    </label>
+    <br>
+    <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button> </form>
+</div>
+        <p><a data-popup-close="popup-1" href="#">Close</a></p>
+        <a class="popup-close" data-popup-close="popup-1" href="#">x</a>
+    </div>
+</div>
+
+
 </html>
+
