--- a/test.html
+++ b/test.html
@@ -187,7 +187,7 @@
     <div class="popup-inner">
 
     <div class="wrapper">
-    <form class="form-signin"> <h2 class="form-signin-heading center"><i class="glyphicon glyphicon-equalizer"></i> Sign Up <i class="glyphicon glyphicon-equalizer flipped"></i></h2>
+    <form class="form-signin create-update-form" action="quests/charcreate" method="POST"> <h2 class="form-signin-heading center"><i class="glyphicon glyphicon-equalizer"></i> Sign Up <i class="glyphicon glyphicon-equalizer flipped"></i></h2>
 
     <hr>
     <p>Enter Your E-mail</p>
@@ -207,6 +207,34 @@
     <button class="btn btn-lg btn-default clearBtn center-block" type="submit">Submit</button> 
 
     <!-- <button class="btn btn-lg btn-default clearBtn" data-popup-open="popup-1" type="submit">Get Started</button> -->
+
+<!-- 
+    <div class="row">
+  <div class="col-md-8">
+      <form class = "create-update-form" action="/quests/charcreate" method="POST">
+
+        <h4><b>Please enter your user name</b></h4>
+          <input type="text" id="nameInput" name="name">
+        <br>
+        <h4><b>Link to your photo</b></h4>
+          <input type="text" id="picUrl" name="photo">
+        <br>
+        <br>
+          <button id="createBtn" class="btn btn-primary">Create Player</button>
+      </form>
+  </div>    
+</div> -->
+
+
+
+
+
+
+
+
+
+
+
 
     </form>
 
